tests/snapshots/integration__integration_tests__approvals__ask_approvals_all_none_approved.snap
---
source: tests/integration_tests/approvals.rs
info:
  program: wt
  args:
    - beta
    - ask-approvals
    - "--all"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpn5sywa/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
⚪ Commands declined

----- stderr -----

🟡 [33m[1m[33mtest-repo[0m[33m wants to execute [1m[33m1[0m[33m command:[0m

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'test'[0m[0m

💡 Allow and remember? [1m[y/N][0m
